# ArableLand2

./: Dockerfile  README.md  download.sh  environment.yml  preprocess.py  run.py  train.py
configs/: main_config.yaml
configs/eval/: eval_config.yaml
configs/process/: process_config.yaml
configs/train/: train_config.yaml
environments/: Dockerfile  environment.yml  pyproject.toml  requirements.txt
notebooks/: cmip_resample.ipynb  crops_disappear_2019_2026.pickle  crops_disappear_2019_2026.txt  crops_statistics.ipynb  model_climate.pkl  model_climate_lc.pkl  notebook_esg.ipynb  notebook_yield.ipynb  rice_mask.ipynb
src/: load_data.py  plotting.py  rice_mask.py  utils.py
src/models/: crop_classifier.py  fert_regression.py  yield_regression.py
