[tool.poetry]
name = "arable"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
numpy = "^1.26.4"
scipy = "^1.12.0"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
ipykernel = "^6.29.3"
rasterio = "^1.3.9"
fiona = "^1.9.5"
seaborn = "^0.13.2"
xgboost = "^2.0.3"
descartes = "^1.1.0"
shap = "^0.44.1"
tqdm = "^4.66.2"
flake8 = "^7.0.0"
black = "^24.2.0"
nbstripout = "^0.7.1"
jupyterlab-widgets = "^3.0.10"
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"
